GNOME Bugzilla – Bug 621037
nibbles network play does not work
Last modified: 2011-08-11 15:54:00 UTC
Originally reported to Launchpad at https://bugs.launchpad.net/ubuntu/+source/gnome-games/+bug/565030 "If I start gnibbles, I cannot select "Network game" in the Game menu. It is grayed out. Interestingly, if I start a game, and then end it, the Network game option is no longer grayed out. However, it still does not work..." Affects gnome-games version: 2.31.3-0ubuntu1
Since gnome-games doesn't use GGZ any more, please remove the Game>Network Game menu item.
Created attachment 192551 [details] [review] 0001-Really-remove-ggz-support-from-gnibbles.patch Here's a patch to remove ggz support entirely from gnibbles.
Created attachment 192554 [details] [review] 0002-Really-remove-ggz-support-from-gnect.patch And here's a smaller patch, for gnibbles.
^gnect
Created attachment 192595 [details] [review] 0003-Really-remove-ggz-support-from-iagno.patch Jason, thanks for committing my patches. Here's one more for Iagno.
Jason, could you please take a look at my third patch? I didn't submit it at the same time as the first two because I wanted to make sure they passed review before doing all the work.