Really remove ggz support from gnibbles

Despite ggz support being removed in 2009, it actually wasn't
completely removed, resulting in a useless Game>Network Game menu
button.

This fixes https://bugzilla.gnome.org/show_bug.cgi?id=621037